src/test/ui/coherence/coherence-overlap-trait-alias.stderr
error[E0283]: type annotations needed
  --> $DIR/coherence-overlap-trait-alias.rs:15:6
   |
LL | impl C for u32 {}
   |      ^ cannot infer type for type `u32`
   |
note: multiple `impl`s satisfying `u32: C` found
  --> $DIR/coherence-overlap-trait-alias.rs:13:1
   |
LL | impl<T: AB> C for T {}
   | ^^^^^^^^^^^^^^^^^^^
LL | #[rustc_strict_coherence]
LL | impl C for u32 {}
   | ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
